# ambc

./: .gitignore  .travis.yml  LICENSE  README.md  ambc.cabal  makefile
src/: BuiltIns.hs  GMachine.hs  Main.hs  UntypedLambda.hs  ambc.rs  makefile  tests.rs  untyped_lambda.rs
src/Iota/: Syntax.hs
src/UntypedLambda/: Compiler.hs  Parser.hs  Reduction.hs  Syntax.hs
test/: Test.hs  UntypedLambdaTests.hs
