name:           ambc
version:        0.1.0
cabal-version:  >= 1.18.1
license:        MIT
license-file:   LICENSE
author:         Maciek Makowski
maintainer:     Maciek Makowski <maciek.makowski@gmail.com>
synopsis:       An experiment in multi-stage compilation
build-type:     Simple

executable ambc
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -Wall -Werror
  build-depends:  
                  base                       == 4.6.0.1,
                  haskeline                  == 0.7.1.2,
                  mtl                        == 2.1.2,
                  parsec                     == 3.1.5
  default-language: Haskell2010

test-suite all-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is:        Test.hs
  ghc-options:    -Wall -Werror -threaded -rtsopts -O2
  build-depends:  
                  base                       == 4.6.0.1,
                  HUnit                      == 1.2.5.2,
                  parsec                     == 3.1.5,
                  QuickCheck                 == 2.6, 
                  test-framework             == 0.8.0.3,
                  test-framework-hunit       == 0.3.0.1, 
                  test-framework-quickcheck2 == 0.3.0.2
  x-uses-tf:      true
  default-language: Haskell2010
